# tess

./: .clang-format  .clang-tidy  .dir-locals.el  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  NEWS.md  NOTICE  README.md  TYPE_ALIAS_TODO.md  configure  flake.nix  test  test.tl  tidy
src/mos/: CMakeLists.txt
src/mos/include/: alloc.h  alloc_internal.h  alloc_string.h  array.h  dbg.h  file.h  hash.h  hashmap.h  hashmap_internal.h  map.h  map_internal.h  mos_string.h  nodiscard.h  platform.h  sexp.h  sexp_parser.h  sha256.h  str.h  string_t.h  types.h  util.h  vector.h
src/mos/src/: alloc.c  alloc_string.c  array.c  dbg.c  embed.c  file.c  hash.c  hashmap.c  map.c  mos_string.c  platform.c  sexp.c  sexp_parser.c  sha256.c  str.c  string_t.c  test_alloc.c  test_array.c  test_file.c  test_hash.c  test_map.c  test_sexp.c  test_sha256.c  test_str.c  test_string.c  test_types.c  test_util.c  test_vector.c  vector.c
src/tess/: CMakeLists.txt  DEV.md
src/tess/embed/: foo  prelude.tl  std  std.c  std.tl
src/tess/include/: ast.h  ast_pool.h  ast_tags.h  cbind.h  compiler.h  error.h  fetch.h  format.h  import_resolver.h  infer.h  lockfile.h  manifest.h  parser.h  source_scanner.h  syntax.h  tess.h  tess_type.h  tlib.h  token.h  tokenizer.h  tpkg.h  transpile.h  transpiler.h  type.h  type_inference.h  type_pool.h  type_registry.h  v2_infer.h  v2_transpile.h  v2_type.h
src/tess/src/: ast.c  cbind.c  compiler.c  error.c  fetch.c  format.c  import_resolver.c  infer.c  infer_alpha.c  infer_constraint.c  infer_internal.h  infer_specialize.c  infer_update.c  lockfile.c  manifest.c  parser.c  parser_expr.c  parser_internal.h  parser_receiver.c  parser_statements.c  parser_tagged_union.c  parser_types.c  source_scanner.c  stdlib_pack.c  syntax.c  tess.c  tess_exe.c  tess_type.c  test_cbind.c  test_deflate.c  test_fetch.c  test_format.c  test_import_resolver.c  test_lockfile.c  test_manifest.c  test_source_scanner.c  test_tess.c  test_tlib.c  test_tpkg.c  test_type_v2.c  (+13 more)
src/tess/tl/: grammar.ebnf  syntax_exploration.tl  test__Exit.tl  test_address_of.tl  test_alias_basic.tl  test_alias_deep_dotted.tl  test_alias_dotted.tl  test_alias_file_boundary.tl  test_alias_funcptr.tl  test_alias_nested_type.tl  test_alias_unalias.tl  test_alignof.tl  test_alloc.tl  test_alloc_align.tl  test_alloc_allocators.tl  test_anon_lambda.tl  test_apply_generic.tl  test_apply_generic_through_pointer.tl  test_apply_lambda.tl  test_arithmetic_unary_op.tl  test_arity_overload.tl  test_array.tl  test_array_api.tl  test_array_comprehensive.tl  test_array_foreach.tl  test_array_index_binary_op.tl  test_array_reduce.tl  test_array_sort.tl  test_assignment_by_op.tl  test_atexit.tl  test_attributes.tl  test_basic.tl  test_begin_end.tl  test_binop.tl  test_bitops.tl  test_bitwise_compound_assign.tl  test_bitwise_operators.tl  test_block_expression.tl  test_builtin_option.tl  test_builtin_result.tl  (+376 more)
src/tess/tl/fixtures/: helper.tl  test_import_relative_dotdot.tl
src/tess/tl/test/fail/: test_fail_add_wrong_return.tl  test_fail_alias_chain.tl  test_fail_alias_double_underscore.tl  test_fail_alias_reserved_c.tl  test_fail_alias_source_not_found.tl  test_fail_alloc_expr_type.tl  test_fail_alloc_missing_capture.tl  test_fail_alloc_no_import.tl  test_fail_ambiguous_nfa.tl  test_fail_auto_address_of_ptr_mutable.tl  test_fail_capture_not_in_scope.tl  test_fail_capture_unlisted_var.tl  test_fail_capture_unused_var.tl  test_fail_capture_without_alloc.tl  test_fail_carray_literal_count.tl  test_fail_carray_ptr_decay_mismatch.tl  test_fail_case_float.tl  test_fail_cchar_u_suffix.tl  test_fail_cchar_unsigned_unify.tl  test_fail_classic_for_scope.tl  test_fail_closure_escape_cross_function.tl  test_fail_closure_escape_return.tl  test_fail_closure_escape_struct.tl  test_fail_closure_in_generic_struct_fn_ptr.tl  test_fail_conditional_variant_binding_unknown.tl  test_fail_const_field_mutation.tl  test_fail_const_index_mutation.tl  test_fail_const_lambda_mutation.tl  test_fail_const_mutation.tl  test_fail_const_strip.tl  test_fail_const_strip_lambda.tl  test_fail_const_strip_nested.tl  test_fail_const_strip_reassign.tl  test_fail_const_strip_return.tl  test_fail_const_strip_struct_field.tl  test_fail_const_value_closure_reassign.tl  test_fail_const_value_compound_assign.tl  test_fail_const_value_explicit_addr.tl  test_fail_const_value_field_compound.tl  test_fail_const_value_field_mutation.tl  (+132 more)
src/tess/tl/test/fail_runtime/: test_fail_runtime_float_narrowing.tl  test_fail_runtime_float_to_int.tl  test_fail_runtime_integer_bounds.tl  test_fail_runtime_integer_bounds_cross_family.tl
src/tess/tl/test/known_fail_failures/: test_fail_auto_collapse_ambiguous.tl  test_fail_discard_in_for_body.tl  test_fail_module_reopen_cross_kind.tl  test_fail_unknown_type_annotation.tl  test_fail_unknown_type_arrow_param.tl
src/tess/tl/test/known_failures/: test_alloc_closure_block_scope.tl  test_alloc_closure_capture_fn_call.tl  test_alloc_closure_generic.tl  test_alloc_closure_generic_struct.tl  test_alloc_closure_if_return.tl  test_alloc_closure_no_captures.tl  test_alloc_closure_return.tl  test_alloc_closure_shorthand_return.tl  test_alloc_closure_struct.tl  test_auto_collapse_t_tagged_union.tl  test_closure_in_generic_struct_fn_ptr.tl  test_direct_return_after_cross_chain_binding.tl  test_f_string_lone_close_brace.tl  test_generic_closure_multi_type.tl  test_generic_ptr_cast_byte_to_cchar.tl  test_generic_ptr_cast_member.tl  test_generic_struct_wrapping_hashmap.tl  test_hash_qualified_call.tl  test_inline_lambda_argument.tl  test_stress_alloc_closures.tl  test_string_without_import.tl  test_type_alias_fully_generic_none.tl  test_ufcs_arrow_implicit_module.tl  test_ufcs_dot_call_unannotated_param.tl  test_ufcs_hashmap.tl  test_ufcs_implicit_addr_cross_module_nullary.tl  test_variadic_longdouble.tl  test_when_else_tagged_union.tl  test_when_last_expr_return.tl
src/tess/tl/test/pass/: test__Exit.tl  test_adversarial_3a9f9b7_variadic_submodule_trait.tl  test_alias_basic.tl  (+507 more)
src/tess/tl/test_pack_lib/: helper.tl  lib.tl
(+162 files in other folders)
